--- a/rootdir/init.loire.rc
+++ b/rootdir/init.loire.rc
@@ -21,7 +21,11 @@ on init
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
-on boot
+on post-fs
+    # Load WLAN and BT modules
+    insmod /system/lib/modules/bcmdhd.ko
+    insmod /system/lib/modules/bcm43xx.ko
+
     # WLAN and BT MAC
     chown system system /sys/devices/soc/soc:bcmdhd_wlan/macaddr
     chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
