ueventd: Fix permissions of LEDs & vibrator

--- a/rootdir/ueventd.loire.rc
+++ b/rootdir/ueventd.loire.rc
@@ -116,6 +116,9 @@
 # Fingerprint sensor  device
 /dev/fingerprint         0664 system input
 
+# Vibrator
+/sys/class/timed_output/vibrator/enable             0666 system    system
+
 # NFC
 /dev/pn54x                                               0660 nfc nfc
 /sys/devices/soc/7af6000.i2c/i2c-6/6-0028  init_deinit   0200 nfc nfc
@@ -127,9 +130,9 @@
 # LED
 /sys/devices/soc/200f000.qcom,spmi/spmi-0/spmi0-03/200f000.qcom,spmi:qcom,pmi8950@3:qcom,leds@d800/leds/wled:backlight max_brightness 0664 system system
 /sys/devices/soc/200f000.qcom,spmi/spmi-0/spmi0-03/200f000.qcom,spmi:qcom,pmi8950@3:qcom,leds@d800/leds/wled:backlight brightness     0664 system system
-/sys/devices/soc/7af6000.i2c/i2c-6/6-0042/leds/led:* max_brightness   0664 system system
-/sys/devices/soc/7af6000.i2c/i2c-6/6-0042/leds/led:* brightness       0664 system system
-/sys/devices/soc/7af6000.i2c/i2c-6/6-0042/leds/led:* blink            0664 system system
+/sys/devices/soc/7af6000.i2c/i2c-6/6-0042/leds/led:* max_brightness   0666 system system
+/sys/devices/soc/7af6000.i2c/i2c-6/6-0042/leds/led:* brightness       0666 system system
+/sys/devices/soc/7af6000.i2c/i2c-6/6-0042/leds/led:* blink            0666 system system
 /sys/devices/soc/7af6000.i2c/i2c-6/6-0042  pattern_run                0664 system system
 /sys/class/leds/lcd-backlight max_brightness                          0644 root system
 /sys/class/leds/lcd-backlight brightness                              0664 system system
